--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-*.gm81 linguist-language=Game Maker Language
+*.gm81 linguist-language=Game Maker Language linguist-detectable
 *.bat linguist-language=Batchfile
