--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
-*.gm81 linguist-language=GameMakerLanguage linguist-detectable
+*.gm81 linguist-language=game-maker-language linguist-detectable
+*.bat linguist-language=Batchfile
