--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-*.gm81 linguist-language=game-maker-language linguist-detectable
+*.gm81 linguist-language=gml linguist-detectable
 *.bat linguist-language=Batchfile
