--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,2 @@
-*.gm81 linguist-language=gml linguist-detectable
-
-*.bat linguist-language=Batchfile linguist-detectable
+*.gm81 linguist-language=gml linguist-detectable=true
+*.bat linguist-language=Batchfile linguist-detectable=true
